# wiiload-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml
src/: lib.rs  main.rs
