[package]
name = "wiiload"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/wiiload-rs"
homepage = "https://github.com/mq1/wiiload-rs"
description = "A minimal wiiload implementation in rust"

[features]
default = []
cli = ["dep:lexopt"]

[dependencies]
thiserror = "2.0"
lexopt = { version = "0.3", optional = true }
flate2 = "1.1"

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
