[package]
name = "wiiload"
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/wiiload-rs"
homepage = "https://github.com/mq1/wiiload-rs"
description = "A minimal wiiload implementation in rust"

[features]
default = ["compression"]
compression = ["dep:miniz_oxide"]
cli = ["dep:lexopt"]

[dependencies]
thiserror = "2.0"
miniz_oxide = { version = "0.9", optional = true }
lexopt = { version = "0.3", optional = true }

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
